# autogen_julia

./: .gitignore  README.md  pyproject.toml  rag_test.py
.cache/41/: cache.db
Felder.jl/: .gitignore  Project.toml  README.md
Felder.jl/examples/: coefficient_form_ad_example.jl  interactive_bracket.jl  live_convectiondiffusion.jl  live_pdecoefficients.jl  surrogate_bracket.jl  temper_convection_2D.jl  temper_convection_3D.jl  thermal_press_2D.jl
Felder.jl/ext/: FelderMakieExt.jl  FelderMakieRecipes.jl
Felder.jl/scripts/: coefficient_form_example.jl  interactive_pdecoefficients_1D.jl
Felder.jl/src/: Assembly.jl  BCs.jl  Distance.jl  DofMap.jl  Felder.jl  FieldIntegration.jl  FieldInterpolation.jl  Fields.jl  Gauss1D.jl  Gauss2D.jl  Gauss3D.jl  Lagrange.jl  Lagrange1D.jl  Lagrange2D.jl  Lagrange3D.jl  LinearSolvePardisoExt.jl  LinearSolver.jl  Material.jl  Mesh.jl  MeshGeneration.jl  Misc.jl  NonlinearSolver.jl  PDE.jl  Probes.jl  Proxy.jl  Quadrature.jl  ShapeFunctions.jl  Shapes.jl  SolidHeatTransfer.jl  SystemOfEquations.jl  TransientSolver.jl  UnvMesh.jl  VTKOutput.jl
Felder.jl/test/: contact_test_2D.jl  contact_test_3D.jl  radiation_test_1.jl  radiation_test_2.jl  runtests.jl  temper_convection_2D.jl  temper_convection_3D.jl  thermal_contact_test.jl
autogen_julia/.cache/41/: cache.db
autogen_julia/julia_exec/: config.json  julia_exec.py
autogen_julia/julia_exec/.cache/41/: cache.db
autogen_julia/julia_exec/results/: block_0.jl  block_1.jl  sine_wave_data.csv
src/: example_config.json  julia_exec.py  st_app.py  test_exec.py
